# kaldi_feature

./: .gitattributes  CMakeLists.txt  README.md
include/: blas.f90  i_malloc.h  lapack.f90  mkl.fi  mkl.h  mkl_blas.fi  mkl_blas.h  mkl_cblas.h  mkl_cluster_sparse_solver.f77  mkl_cluster_sparse_solver.f90  mkl_cluster_sparse_solver.h  mkl_df.f90  mkl_df.h  mkl_df_defines.h  mkl_df_functions.h  mkl_df_types.h  mkl_dfti.f90  mkl_dfti.h  mkl_direct_blas.h  mkl_direct_call.fi  mkl_direct_call.h  mkl_dss.f77  mkl_dss.f90  mkl_dss.fi  mkl_lapack.fi  mkl_lapack.h  mkl_lapacke.h  mkl_pardiso.f77  mkl_pardiso.f90  mkl_pardiso.fi  mkl_poisson.f90  mkl_poisson.h  mkl_rci.f90  mkl_rci.fi  mkl_rci.h  mkl_service.f90  mkl_service.fi  mkl_service.h  mkl_solver.f77  mkl_solver.f90  (+28 more)
include/base/: kaldi-types.h  version.h
include/fftw/: fftw.h  fftw3.f  fftw3_mkl.f  fftw3_mkl.h  fftw3_mkl_f77.h  rfftw.h
include/ia32/: blas95.mod  f95_precision.mod  lapack95.mod  mkl_service.mod
include/include/: blas.f90  lapack.f90  mkl.fi  mkl.h  mkl_blas.fi  mkl_blas.h  mkl_cblas.h  mkl_cdft.f90  mkl_cluster_sparse_solver.f90  mkl_cluster_sparse_solver.fi  mkl_df.f90  mkl_df_defines.h  mkl_df_types.h  mkl_dfti.f90  mkl_direct_blas.h  mkl_direct_call.fi  mkl_direct_call.h  mkl_dnn.h  mkl_dnn_types.h  mkl_dss.f90  mkl_dss.fi  mkl_dss.h  mkl_lapack.fi  mkl_lapack.h  mkl_lapacke.h  mkl_pardiso.f90  mkl_pardiso.fi  mkl_pardiso.h  mkl_poisson.f90  mkl_rci.f90  mkl_rci.fi  mkl_rci.h  mkl_service.f90  mkl_service.fi  mkl_service.h  mkl_solvers_ee.fi  mkl_sparse_handle.f90  mkl_sparse_handle.fi  mkl_spblas.f90  mkl_spblas.fi  (+8 more)
include/include/fftw/: fftw3-mpi.f03  fftw3-mpi_mkl.h  fftw3.f  fftw3.f03  fftw3_mkl.f  fftw3_mkl.h  fftw3_mkl_f77.h
include/include/intel64/ilp64/: blas95.mod  f95_precision.mod  lapack95.mod  mkl_service.mod
include/include/intel64/lp64/: blas95.mod  f95_precision.mod  lapack95.mod  mkl_service.mod
include/intel64/ilp64/: blas95.mod  f95_precision.mod  lapack95.mod  mkl_service.mod
include/intel64/lp64/: blas95.mod  f95_precision.mod  lapack95.mod  mkl_service.mod
src/: CMakeLists.txt  computeFeature.cc  computeFeature.h  readData.cc  readData.h  voiceActivitydetection.cc  voiceActivitydetection.h  writeData.cc  writeData.h
unitbin/: CMakeLists.txt  compute_fbank_cmvn_vad.cc  compute_fbank_vad.cc  compute_fbank_zcr_energy_vad.cc  get_fbank_vad.cc  kaldi_split.cc  kaldi_vad.cc  kaldi_vad_tool.cc
